--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,11 +71,12 @@ stages:
   jobs:
   - deployment: Deploy
     pool:
-      vmImage: 'ubuntu-16.04'
+      name: 'default'
     environment: dev
 
     variables:
     - group: Release
+
     strategy:
       runOnce:
         deploy:
